--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
